ready for landing on WP

--- a/app/page-searchform.html
+++ b/app/page-searchform.html
@@ -125,234 +125,27 @@
     </header>
     <!-- ======= END HEADER ======= -->
 
-    <!-- ======= SECTION CATALOG======= -->
-    <section class="s-catalog">
+
+    <!-- ======= SECTION SEARCHFORM ======= -->
+    <section class="s-searchform">
         <div class="container">
-            <div class="section-head">
-                <h2>Каталог</h2>
-            </div>
             <div class="row">
-                <div class="col-xl-11">
-                    <div class="catalog-wrap">
-                        <!-- catalog item -->
-                        <div class="catalog-item">
-                            <a href="#0">Ригели двухполочные</a>
-                        </div>
-                        <!-- /catalog item -->
-
-                        <!-- catalog item -->
-                        <div class="catalog-item">
-                            <a href="#0">Камни бетонные бортовые</a>
-                        </div>
-                        <!-- /catalog item -->
-
-                        <!-- catalog item -->
-                        <div class="catalog-item">
-                            <a href="#0">Плиты железобетонные многопустотные</a>
-                        </div>
-                        <!-- /catalog item -->
-
-                        <!-- catalog item -->
-                        <div class="catalog-item">
-                            <a href="#0">Блоки бетонные</a>
-                        </div>
-                        <!-- /catalog item -->
-
-                        <!-- catalog item -->
-                        <div class="catalog-item">
-                            <a href="#0">Сваи железобетонные</a>
-                        </div>
-                        <!-- /catalog item -->
-
-                        <!-- catalog item -->
-                        <div class="catalog-item">
-                            <a href="#0">Лестничные площадки</a>
-                        </div>
-                        <!-- /catalog item -->
-
-                        <!-- catalog item -->
-                        <div class="catalog-item active">
-                            <a href="#0">Лестничные марши</a>
-                        </div>
-                        <!-- /catalog item -->
-
-                        <!-- catalog item -->
-                        <div class="catalog-item">
-                            <a href="#0">Лестничные ступени</a>
-                        </div>
-                        <!-- /catalog item -->
-
-                        <!-- catalog item -->
-                        <div class="catalog-item">
-                            <a href="#0">Перемычки</a>
-                        </div>
-                        <!-- /catalog item -->
-
-                        <!-- catalog item -->
-                        <div class="catalog-item">
-                            <a href="#0">Плиты дорожные</a>
-                        </div>
-                        <!-- /catalog item -->
-
-                        <!-- catalog item -->
-                        <div class="catalog-item">
-                            <a href="#0">Утяжелители болотные</a>
-                        </div>
-                        <!-- /catalog item -->
-
-                        <!-- catalog item -->
-                        <div class="catalog-item">
-                            <a href="#0">Железобетонные прогоны</a>
-                        </div>
-                        <!-- /catalog item -->
-
-                        <!-- catalog item -->
-                        <div class="catalog-item">
-                            <a href="#0">Фундаменты под трехшарнирные железобетонные рамы</a>
-                        </div>
-                        <!-- /catalog item -->
-
-                        <!-- catalog item -->
-                        <div class="catalog-item">
-                            <a href="#0">Панель цокольная</a>
-                        </div>
-                        <!-- /catalog item -->
-
-                        <!-- catalog item -->
-                        <div class="catalog-item">
-                            <a href="#0">Плиты перекрытия многопустотные</a>
-                        </div>
-                        <!-- /catalog item -->
+                <div class="col-xl-11 searchform-wrap">
+                    <div class="section-head">
+                        <h2>Поиск</h2>
                     </div>
+
+                    <form action="s" class="searchform">
+                        <label>
+                            <input type="search" placeholder="Поиск...">
+                            <button type="submit" class="btn-search"></button>
+                        </label>
+                    </form>
                 </div>
             </div>
         </div>
     </section>
-    <!-- ======= END SECTION CATALOG ======= -->
-
-
-    <!-- ======= SECTION PRODUCT CARD ======= -->
-    <section class="s-product-card">
-        <div class="container">
-            <div class="prod-card-head">
-                <div class="prod-img">
-                    <img src="img/prod-img/prod-lestnichnue_marshu.png" alt="alt" class="img-responsive">
-                </div>
-                <div class="prod-title">
-                    Лестничные марши
-                </div>
-            </div>
-            <div class="prod-wrap">
-                <table class="prod-table" data-tablesaw-mode="swipe">
-                    <thead>
-                    <tr>
-                        <th data-tablesaw-priority="persist">Вид продукции, Эскиз, Обозначение документации</th>
-                        <th>Марка</th>
-                        <th colspan="3" class="size">Размеры, мм</th>
-                        <th>Класс бетона по прочности на сжатие</th>
-                        <th>Объем бетона, м3</th>
-                        <th>Масса, т</th>
-                    </tr>
-
-                    <tr class="sub-th">
-                        <th></th>
-                        <th></th>
-                        <th>L</th>
-                        <th>B</th>
-                        <th>H</th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                    </tr>
-                    </thead>
-
-                    <tbody>
-                    <!-- products-table item -->
-                    <tr class="prod-table-row">
-                        <td rowspan="3" class="prod-table-desc">
-                                <span class="prod-table-title">Лестничные марши
-                                    Серия 1.251.1-4 вып.1
-                                </span>
-                            Лестничные марши предназначены для устройства внутренних лестниц в помещениях с
-                            неагрессивной средой общественных зданий со стенами из кирпича или крупных блоков с высотой
-                            этажа 3,3, возводимых в обычных условиях строительства.
-                        </td>
-                        <td>2 ЛМФ 39.12.17-5</td>
-                        <td>3913</td>
-                        <td>1200</td>
-                        <td>295</td>
-                        <td>B 15</td>
-                        <td>0,517</td>
-                        <td>1,29</td>
-                    </tr>
-
-                    <tr>
-                        <td>2 ЛМФ 39.12.17-5</td>
-                        <td>3913</td>
-                        <td>1200</td>
-                        <td>295</td>
-                        <td>B 15</td>
-                        <td>0,517</td>
-                        <td>1,29</td>
-                    </tr>
-
-                    <tr class="last-mark">
-                        <td>2 ЛМФ 39.12.17-5</td>
-                        <td>3913</td>
-                        <td>1200</td>
-                        <td>295</td>
-                        <td>B 15</td>
-                        <td>0,517</td>
-                        <td>1,29</td>
-                    </tr>
-                    <!-- products-table item -->
-
-
-                    <!-- products-table item -->
-                    <tr class="prod-table-row">
-                        <td rowspan="3" class="prod-table-desc">
-                                <span class="prod-table-title">Лестничные марши
-                                    Серия 1.251.1-4 вып.1
-                                </span>
-                            Лестничные марши предназначены для устройства внутренних лестниц в помещениях с
-                            неагрессивной средой общественных зданий со стенами из кирпича или крупных блоков с высотой
-                            этажа 3,3, возводимых в обычных условиях строительства.
-                        </td>
-                        <td>2 ЛМФ 39.12.17-5</td>
-                        <td>3913</td>
-                        <td>1200</td>
-                        <td>295</td>
-                        <td>B 15</td>
-                        <td>0,517</td>
-                        <td>1,29</td>
-                    </tr>
-
-                    <tr>
-                        <td>2 ЛМФ 39.12.17-5</td>
-                        <td>3913</td>
-                        <td>1200</td>
-                        <td>295</td>
-                        <td>B 15</td>
-                        <td>0,517</td>
-                        <td>1,29</td>
-                    </tr>
-
-                    <tr class="last-mark">
-                        <td>2 ЛМФ 39.12.17-5</td>
-                        <td>3913</td>
-                        <td>1200</td>
-                        <td>295</td>
-                        <td>B 15</td>
-                        <td>0,517</td>
-                        <td>1,29</td>
-                    </tr>
-                    <!-- products-table item -->
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </section>
-    <!-- ======= END SECTION PRODUCT CARD ======= -->
+    <!-- ======= END SECTION SEARCHFORM ======= -->
 
 
     <!-- ======= SECTION INTEREST ======= -->
@@ -372,7 +165,6 @@
 						</span>
                         </a>
                     </div>
-
                     <!-- /interest-item -->
 
                     <!-- interest-item -->
