fix issues during landing

--- a/app/index.html
+++ b/app/index.html
@@ -889,6 +889,9 @@
 	<footer class="main-foot bg-darkblue">
 		<div class="container">
 			<div class="foot-wrap">
+				<div class="developer-block">
+					Сайт разработан студией <a href="http://ir-web.ru/" target="_blank">IR-WEB</a>
+				</div>
 				<div class="foot-text">
 					450027, г. Уфа, Индустриальное шоссе, 4.<br>Тел. отдела продаж: <a href="tel:73472422812">+7   (347) 242-28-12</a>
 				</div>
