--- a/app/page-vacant.html
+++ b/app/page-vacant.html
@@ -126,100 +126,32 @@
     <!-- ======= END HEADER ======= -->
 
 
-    <!-- ======= SECTION SEARCHFORM ======= -->
-    <section class="s-searchform s-searchresult">
+    <!-- ======= SECTION PAGE ======= -->
+    <section class="s-page">
         <div class="container">
-            <div class="row">
-                <div class="col-xl-11 searchform-wrap">
-                    <div class="section-head">
-                        <h2>Поиск</h2>
-                    </div>
-
-                    <form action="s" class="searchform">
-                        <label>
-                            <input type="search" placeholder="Поиск...">
-                            <button type="submit" class="btn-search"></button>
-                        </label>
-                    </form>
-
-                    <div class="results">
-                        <h3>по Вашему запросу ничего не найдено...</h3>
-                        <h3>Результат Поиска: найдено <span>26</span> объектов</h3>
-                        <div class="results-wrap">
-                            <!-- result item -->
-                            <a href="#0" class="result-item"></a>
-                            <!-- /result item -->
-                        </div>
-                    </div>
-                </div>
+            <div class="section-head">
+                <h2>Вакансии</h2>
             </div>
+
+            <ul>
+                <li>Электрогазосварщик занятый на резке и ручной сварке</li>
+                <li>Лаборант ЖБ изделий</li>
+                <li>Штукатур</li>
+                <li>Водитель автомобиля "КАМАЗ"</li>
+                <li>Машинист перегрузки цемента</li>
+            </ul>
+
+            <div class="small-text">
+                Режим работы: односменный, пятидневная рабочая неделя с двумя выходными <br>
+                Характер работы: постоянный <br>
+                Стабильная, своевременная зарплата, ежедневная дотация на питание <br>
+                Оформление по ТК РФ, полный социальный пакет <br>
+                По всем вопросам трудоустройства обращаться в отдел кадров по тел. 242-28-30
+            </div>
+
         </div>
     </section>
-    <!-- ======= END SECTION SEARCHFORM ======= -->
-
-
-    <!-- ======= SECTION INTEREST ======= -->
-    <section class="s-interest">
-        <div class="container">
-            <div class="section-head">Возможно вас заинтересует</div>
-            <div class="interests-wrap">
-                <div class="row">
-                    <!-- interest-item -->
-                    <div class="col-sm-6 col-lg-3">
-                        <a href="#0" class="int-item">
-						<span class="int-item-img">
-							<img src="img/prod-img-1.png" alt="alt" class="img-responsive">
-						</span>
-                            <span class="int-item-title">
-							Лестничные марши
-						</span>
-                        </a>
-                    </div>
-                    <!-- /interest-item -->
-
-                    <!-- interest-item -->
-                    <div class="col-sm-6 col-lg-3">
-                        <a href="#0" class="int-item">
-						<span class="int-item-img">
-							<img src="img/prod-img-2.png" alt="alt" class="img-responsive">
-						</span>
-                            <span class="int-item-title">
-							Плиты перекрытия
-						</span>
-                        </a>
-                    </div>
-                    <!-- /interest-item -->
-
-                    <!-- interest-item -->
-                    <div class="col-sm-6 col-lg-3">
-                        <a href="#0" class="int-item">
-						<span class="int-item-img">
-							<img src="img/prod-img-3.png" alt="alt" class="img-responsive">
-						</span>
-                            <span class="int-item-title">
-							Перемычки и дорожные плиты
-						</span>
-                        </a>
-                    </div>
-                    <!-- /interest-item -->
-
-                    <!-- interest-item -->
-                    <div class="col-sm-6 col-lg-3">
-                        <a href="#0" class="int-item">
-						<span class="int-item-img">
-							<img src="img/prod-img-4.png" alt="alt" class="img-responsive">
-						</span>
-                            <span class="int-item-title">
-							Сваи
-						</span>
-                        </a>
-                    </div>
-                    <!-- /interest-item -->
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- ======= END SECTION TOP INTEREST ======= -->
+    <!-- ======= END SECTION PAGE ======= -->
 
 
     <!-- ======= SECTION MAP ======= -->
@@ -229,7 +161,6 @@
         </div>
     </section>
     <!-- ======= END SECTION MAP ======= -->
-
 
     <!-- ======= FOOTER ======= -->
     <footer class="main-foot bg-darkblue">
